Fix overflowing logo

--- a/assets/style.css
+++ b/assets/style.css
@@ -221,6 +221,7 @@ section {
 }
 .logo {
   width: 560px;
+  max-width: 100%;
   margin: auto;
 }
 .title_images {
